# tempanalysisrep1

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
devops/commands/: entrypoint.sh  start.celery-beat.sh  start.celery.sh  start.sh
helm/: values.dev.yaml  values.yaml
src/a12n/: admin.py  models.py  tasks.py  urls.py
src/a12n/api/: serializers.py  views.py
src/a12n/migrations/: 0001_otp_model.py
src/a12n/services/: a2p_sms.py  base.py  otp.py  reset_password.py
src/app/: base_config.py  celery.py  models.py  services.py  settings.py  storages.py
src/app/api/: exception_handler.py  viewsets.py
src/app/conf/: api.py  auth.py  boilerplate.py  celery_conf.py  ckeditor.py  db.py  email.py  environ.py  export-import.py  http.py  i18n.py  installed_apps.py  logging.py  media.py  middleware.py  payments.py  static.py  storage-aws.py
src/app/urls/: __init__.py  v1.py
src/auto/: autocomplete.py  enum.py  forms.py  resourse.py  urls.py  widget.py
src/auto/admin/: __init__.py  car.py  country.py  equipment.py  offer.py  vin.py
src/auto/migrations/: 0001_init.py  0002_init.py  0003_add_is_popular.py  0004_change_additional_service.py  0005_change_enums.py  0006_change_equipment.py  0006_replace_one2one_to_fk.py  0007_change_eq_offer.py  0008_merge_migrations.py  0009_otp_model.py  0010_null_add.py  0011_remove_null.py  0012_add_state.py  0013_change_on_delete_method.py  0014_change_field_type.py  0015_add_status_in_car_model.py  0016_make_unique_naming.py
src/auto/models/: __init__.py  base.py  body_type.py  car.py  car_brand.py  car_color.py  car_image.py  car_model.py  country.py  documents.py  drive.py  engine_type.py  engine_volume.py  equipment.py  feature.py  offer.py  offer_image.py  product_declaration_document.py  sub_section.py  technical_image.py  transit_declaration_document.py  transmission.py  transport_invoice_document.py  vin.py
src/auto/templates/: change_list.html
src/buyer/: admin.py  apps.py  models.py  urls.py
src/buyer/api/: views.py
src/buyer/migrations/: 0001_init.py  (+2 more)
src/common/: common.py  tasks.py  validators.py
(+27 files in other folders)
